[package]
name = "osu_true_rank"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rosu = "0.5.0"
chrono = "0.4.24"
csv = "1.2.1"
serde_derive = "1.0.156"
serde = "1.0.156"
tokio = { version = "1.26.0", features = ["full"] }
multimap = "0.8.3"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
